Updates README.md, finish up other areas

--- a/TwitterRedo/Base.lproj/Main.storyboard
+++ b/TwitterRedo/Base.lproj/Main.storyboard
@@ -259,8 +259,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lmU-uW-A0d">
+                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lmU-uW-A0d">
                                                     <rect key="frame" x="8" y="8" width="75" height="75"/>
+                                                    <gestureRecognizers/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="75" id="2Cw-Bd-kpY"/>
                                                         <constraint firstAttribute="width" constant="75" id="jO5-iH-OMu"/>
